--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.7",
     "@types/sequelize": "^4.28.20",
+    "@types/winston": "^2.4.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/joi": "^17.2.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.4",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "winston": "^3.15.0"
   }
 }
